--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -169,7 +169,7 @@ BEGIN
             VALUE "FileDescription", "»õ³ª·ç 1.0\0"
             VALUE "FileVersion", "1.0\0"
             VALUE "InternalName", "SAENARU\0"
-            VALUE "LegalCopyright", "Copyright (C) 2003 ÀåÇý½Ä.\0"
+            VALUE "LegalCopyright", "Copyright (C) 2003-2006 ÀåÇý½Ä.\0"
             VALUE "LegalTrademarks", "\0"
             VALUE "OriginalFilename", "SAENARU.IME\0"
 //            VALUE "PrivateBuild", "\0"
