added Qwerty shortcut key option for Dvorak.

--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -90,6 +90,18 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,26,79,53,10
     CONTROL         "동시치기 (&C)",IDC_CONCURRENT_TYPING,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,83,79,53,10
+
+    CONTROL         "자소 단위 지움 (&J)", IDC_BACKSPACE_BY_JAMO, "Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 138, 79, 71, 10 
+    CONTROL         "<ESC> 영문전환 (&E)", IDC_ESCENG_SUPPORT, "Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 26, 103,109, 10 
+    CONTROL         "<Shift>-<SPACE> 한/영키 (&H)", IDC_USE_SHIFT_SPACE, "Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 26, 91, 109, 10 
+    CONTROL         "드보락 지원 (&V)", IDC_DVORAK_SUPPORT, "Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 138, 91, 70, 10 
+    CONTROL         "쿼티 단축키 (&Q)", IDC_QWERTY_HOTKEY_SUPPORT, "Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 138, 103, 70, 10 
+/*
     CONTROL         "드보락 지원 (&V)",IDC_DVORAK_SUPPORT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,138,79,60,10
     CONTROL         "자소 단위 지움 (&J)",IDC_BACKSPACE_BY_JAMO,"Button",
@@ -98,6 +110,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,104, 91,83,10
     CONTROL         "<Shift>-<SPACE> 한/영 전환 (&H)",IDC_USE_SHIFT_SPACE,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,26,103,124,10
+*/
     CONTROL         "확장한자(KS X 1002) 지원 (&X)",IDC_KSX1002_SUPPORT,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,26,115,156,10
     CONTROL         "완성형(KS X 1001) 한글 음절 제한 (&K)",IDC_KSX1001_SUPPORT,
@@ -357,15 +370,17 @@ FONT 9, "Tahoma"
    CONTROL	"Co&llective", IDC_COMPOSITE_TYPING, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,79,53,10 
    CONTROL	"&Concurrent", IDC_CONCURRENT_TYPING, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,83,79,53,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,83,79,49,10 
    CONTROL	"D&Vorak", IDC_DVORAK_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,138,79,60,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,106,91,35,10
+   CONTROL      "&Qwerty shortcut", IDC_QWERTY_HOTKEY_SUPPORT , BUTTON,
+                BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,143,91,67,10 
    CONTROL	"Delete by &Jaso unit", IDC_BACKSPACE_BY_JAMO, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,91,71,10 
-   CONTROL	"<&ESC> to Ascii mode", IDC_ESCENG_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,109,91,88,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,135,79,71,10
+   CONTROL	"<&ESC> to ENG mode", IDC_ESCENG_SUPPORT, BUTTON,
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,91,79,10 
    CONTROL	"<Shift>-<SPACE> toggle &Han/Eng mode", IDC_USE_SHIFT_SPACE, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,103,155,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,103,155,10
    CONTROL	"Support e&Xtended Hanja (KS X 1002) ", IDC_KSX1002_SUPPORT, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,115,156,10 
    CONTROL	"Restrict to Wansung (&KS X 1001) syllables", IDC_KSX1001_SUPPORT, BUTTON,
