--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -124,16 +124,18 @@ BEGIN
     CONTROL         "<Shift>-<SPACE> 한/영 전환 (&H)",IDC_USE_SHIFT_SPACE,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,26,103,124,10
 */
-    CONTROL         "확장한자(KS X 1002) 지원 (&X)",IDC_KSX1002_SUPPORT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,127,90 ,10
+    CONTROL         "확장한자 지원 (&X)",IDC_KSX1002_SUPPORT,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,115,77 ,10
+    CONTROL         "<SPACE> 한자 선택 (&P)", IDC_HANJA_CAND_SPACE,
+                    BUTTON, BS_AUTOCHECKBOX | WS_TABSTOP,134, 128, 90, 10 
     CONTROL         "완성형(KS X 1001) 음절 제한 (&K)",IDC_KSX1001_SUPPORT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,114,156,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,114,114,10
     CONTROL         "한글 첫가끝 조합 (&O)",
                     IDC_JAMOS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    16,139,82,10
+                    16,127,82,10
     CONTROL         "전체 단자모 조합 (&U)",
                     IDC_FULL_MULTIJOMO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    116,139,78,10
+                    16,139,78,10
 END
 
 DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
@@ -306,6 +308,7 @@ BEGIN
 	MENUITEM SEPARATOR
     	MENUITEM "드보락(&V)",		IDM_DVORAK
     	MENUITEM "ESC 영문전환(&E)",	IDM_ESC_ASCII
+    	MENUITEM "<Shift>-<SPACE> 한/영 키",	IDM_HANGUL_TOGGLE
     	MENUITEM "단어단위 편집(&W)",	IDM_WORD_UNIT
 	MENUITEM SEPARATOR
     	MENUITEM "키보드 보기(&K)",	IDM_SHOW_KEYBOARD
@@ -376,6 +379,7 @@ BEGIN
     IDS_MENU_DVORAK             "드보락(&V)"
     IDS_MENU_ESC_ASCII          "&ESC 영문전환"
     IDS_MENU_EDIT_WORD_UNIT     "단어단위 편집(&W)"
+    IDS_MENU_HANGUL_TOGGLE      "<Shift>-<S&PACE> 한/영키"
     IDS_MENU_SHOW_KEYBOARD      "키보드 보기(&K)"
 
     IDS_MENU_OLD2BUL            "두벌식(&2)"
@@ -472,15 +476,18 @@ FONT 8, "MS Shell Dlg"
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,103,79,10 
    CONTROL	"<Shift>-<SPACE> toggle &Han/Eng", IDC_USE_SHIFT_SPACE, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,90,122,10
-   CONTROL	"Support e&Xtended Hanja (KS X 1002) ", IDC_KSX1002_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,115,156,10 
+   CONTROL	"E&xtended Hanja", IDC_KSX1002_SUPPORT, BUTTON,
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,115,96,10 
+   CONTROL      "Select Hanja with <S&PACE>", IDC_HANJA_CAND_SPACE, BUTTON,
+                BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,
+                    126, 115, 122, 10 
    CONTROL	"Restrict to Wansung (&KS X 1001) syllables", IDC_KSX1001_SUPPORT, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,127,156,10 
    CONTROL	"Compose Hangul Jam&Os", IDC_JAMOS, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,139,86,10 
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,26,139,94,10 
    CONTROL      "&Raw Jamo compose",
                     IDC_FULL_MULTIJOMO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    115,139,78,10
+                    126,139,78,10
 }
 
 DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
@@ -553,6 +560,7 @@ BEGIN
     	MENUITEM "D&vorak",		IDM_DVORAK
     	MENUITEM "&ESC to english",	IDM_ESC_ASCII
     	MENUITEM "&Word unit edit",	IDM_WORD_UNIT
+        MENUITEM "Use <Shift>-<S&PACE>", IDM_HANGUL_TOGGLE
 	MENUITEM SEPARATOR
     	MENUITEM "Show &Keyboard",	IDM_SHOW_KEYBOARD
 	MENUITEM SEPARATOR
@@ -616,6 +624,7 @@ BEGIN
     IDS_MENU_ESC_ASCII          "&ESC to Ascii Mode"
     IDS_MENU_EDIT_WORD_UNIT     "&Word Unit Edit"
     IDS_MENU_SHOW_KEYBOARD      "Show &Keyboard"
+    IDS_MENU_HANGUL_TOGGLE      "Use <Shift>-<S&PACE> Toggle"
 
     IDS_MENU_OLD2BUL            "&2-Set"
     IDS_MENU_3FIN               "&3-Set Final"
